[package]
name = "demoscene"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = 1

[dependencies]
anyhow = "1"
arcstr = "1"
env_logger = "0.9"
futures = "0.3"
fxhash = "0.2"
glib = "0.15"
gstreamer = "0.18"
gstreamer-player = "0.18"
lofty = "0.6"
log = "0.4"
md5 = "0.7"
netidx-container = { version = "0.11", path = "../netidx/netidx-container" }
netidx-protocols = { version = "0.11", path = "../netidx/netidx-protocols" }
netidx-tools = { version = "0.11", path = "../netidx/netidx-tools" }
netidx = { version = "0.11", path = "../netidx/netidx" }
rayon = "1"
regex = "1"
sled = { version = "0.34", features = ["zstd", "compression"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
indexmap = "1"
parking_lot = "0.12"
rand = "0.8"
dirs = "4"
lazy_static = "1"
